# sqlpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Connect.cpp  Connect.h  Drive.cpp  Query.hpp  Result.hpp  main.cpp  mysql.hpp
cmake/: FindBoost.cmake  FindMINI_TEST.cmake  FindMySql.cmake
sqlpp/: Connect.h  Drive.h  Query.hpp  Result.hpp  exception.h  macro.h
